--- a/Traveldiary/app/src/main/AndroidManifest.xml
+++ b/Traveldiary/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ForgetPassActivity"></activity>
         <activity
             android:name=".RegisterActivity"
-            android:theme="@style/customTextstyle"
             android:label="账号注册"
-            ></activity>
+            android:theme="@style/customTextstyle" />
         <activity android:name=".MainPageActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
