--- a/Traveldiary/app/src/main/AndroidManifest.xml
+++ b/Traveldiary/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
 
         <activity
                 android:name=".MessageTree.MessageTree"
-                android:label="留言树"
+                android:label="留言记录"
                 android:theme="@style/settings"/>
     </application>
 
