连接后台，修改删除
Signed-off-by: LiHeQian6 <1142808063@qq.com>

--- a/Traveldiary/app/build.gradle
+++ b/Traveldiary/app/build.gradle
@@ -9,7 +9,16 @@ android {
             storePassword 'li040011'
         }
     }
-    compileSdkVersion 28
+    buildTypes {
+        release {
+            shrinkResources false
+        }
+    }
+
+    aaptOptions {
+        cruncherEnabled = false
+    }
+        compileSdkVersion 28
     defaultConfig {
         applicationId "com.project.li.travel_diary"
         minSdkVersion 15
