--- a/Traveldiary/app/src/main/AndroidManifest.xml
+++ b/Traveldiary/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
+        android:name=".JPush.MyJPush"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="且行且记"
@@ -69,6 +70,26 @@
             android:name=".MessageTree.EditPage"
             android:label="编辑留言"
             android:theme="@style/settings"></activity>
+
+        <receiver
+            android:name=".JPush.JPushReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
+                <category android:name="com.example.jpush" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".JPush.JPushService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":pushcore">
+            <intent-filter>
+                <action android:name="cn.jiguang.user.service.action" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
